--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,12 @@ highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "t
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : 추천 상품
-description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
-
-
+description: 좋은 상품들을 추천해드립니다. # this means to ignore newlines until "Language & timezone"
+  
 ## => Language and Timezone
 ##############################
-lang: # the language of your site, default as "en"
-timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
+lang: ko      # the language of your site, default as "en"
+timezone: KR # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
 ## => Author and Social
@@ -181,7 +179,7 @@ analytics:
 ##############################
 markdown    : kramdown
 highlighter : rouge
-permalink   : date
+permalink   : # date
 
 exclude:
   - CHANGELOG.md
